src/App.css
.App {
  padding-top: 115px;
  min-height: 100vh;
  height: 100%;
  font-family: Helvetica;
  background-color: lightblue;
}

.fixed-top {
  background-color: white;
  padding: .5em;
  box-shadow: 0px 4px 10px grey;
}

.site-title {
  color: black;
}

.site-title:hover {
  color: grey;
}

.site-subtitle {
  color: black;
  font-style: italic;
  font-size: 18px;
}

@media screen and (max-width: 450px) {
  .site-subtitle {
    display: none;
  }
  .App {
    padding-top: 90px;
  }
  .site-title {
    text-align: center
  }
}

.front-page-container {
  max-width: 570px;
  margin-bottom: 20px;
}

.post-detail-container {
  max-width: 650px;
  margin-bottom: 20px;
}

.post-detail-body {
  font-style: italic;
  font-size: 18px
}

.navbar {
  border-radius: 15px;
  box-shadow: 4px 4px 10px;
  background-color: grey;
}

#options-bar-link {
  color: white;
  cursor: pointer;
  font-size: 20px
}
#options-bar-link:hover {
  color: lightblue;
}

.dropdown-item {
  cursor: pointer;
}

.post-card,
.post-detail-card{
  margin-left: auto;
  margin-right: auto;
  background-color: white;
  border-radius: 15px;
  margin-top: 20px;
  padding: 20px;
  box-shadow: 4px 4px 10px;
}

.comment-card,
.comment-list-title {
  margin-right: auto;
  background-color: white;
  border-radius: 15px;
  margin-top: 20px;
  padding: 20px;
  box-shadow: 4px 4px 10px;
}

.post {
  color: black;
}

.post:hover {
  text-decoration: none;
  color: darkblue;
}
.comment-body,
.comment-score,
.comment-author {
  margin-bottom: 0px;
}

.comment-body {
  font-style: italic;
}

.form-control {
  margin-bottom: 15px;
}

.app-footer {
  margin-bottom: 5px
}

hr.footer-hr {
  margin: 0px;
  margin: 0 5% 5px 5%;
}

.footer-text {
  margin: 0 5%;
  color: grey;
  font-style: italic;
}

.form-warning {
  color: red;
}

.login-container {
  background-color: white;
  height: 500px;
  width: 400px;
  margin-right: auto;
  margin-left: auto;
  border-radius: 20px;
  box-shadow: 4px 4px 10px grey;
  padding: 25px 40px;
}

